<resources>
    <string name="app_name">WhatsAppStickers</string>
    <string name="tray_image_content_description">Sticker Pack Tray Image</string>
    <string name="more_info_button">More info about sticker pack</string>
    <string name="add_to_whatsapp">Add to WhatsApp</string>
    <string name="add_button_content_description">Add sticker pack to WhatsApp</string>
    <string name="dot">•</string>
    <string name="title_activity_sticker_pack_details_single_pack">Sticker Pack</string>
    <string name="title_activity_sticker_pack_details_multiple_pack">Sticker details</string>
    <string name="error_adding_sticker_pack">Could not add this sticker pack. Please install the latest version of
        WhatsApp before adding sticker pack
    </string>
    <string name="title_validation_error">Error with the pack</string>
    <string name="details_pack_already_added">Sticker pack added to WhatsApp</string>
    <string name="add_pack_fail_prompt_update_whatsapp">Sticker pack not added. If you\'d like to add it, make sure you
        update to the latest version of WhatsApp.
    </string>
    <string name="add_pack_fail_prompt_update_play_link">Update</string>
    <string name="cannot_find_play_store">Google Play is not installed on the device.</string>
    <string name="title_activity_new_sticker_pack">New sticker pack</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_author">Author</string>
    <string name="create_sticker_pack">Select images</string>
    <string name="intro_magic_title">Automatic background clearing</string>
    <string name="intro_manual_title">Manual background clearing</string>
    <string name="intro_zoom_title">Zooming and Moving the picture</string>
    <string name="intro_magic_description">Use the Magic Wand tool and touch parts of the background you want to erase
    </string>
    <string name="intro_manual_description">Use the Pencil tool to erase the background dragging your finger around the
        screen
    </string>
    <string name="intro_zoom_description">Use the Magnifier tool to Zoom in/out so you can make better cuts</string>
    <string name="image_chooser_message">Choose an image to cut</string>
    <string name="sticker_packs">Sticker Packs</string>
    <string name="setting">Settings</string>
    <string name="rate">Rate App</string>
    <string name="feedback_us">Feedback Us</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>